<resources>
    <string name="app_name" translatable="false">Drapeau</string>
    <string name="welcome_enter_name">Please enter your name.</string>
    <string name="quiz_flag_question">Quel est le pays de ce drapeau ?</string>
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_name">Name</string>
    <string name="quiz_flag_content">Country Flag.</string>
    <string name="quiz_progress" translatable="false">%1$d/%2$d</string>
    <string name="quiz_btn_finish">Finir</string>
    <string name="quiz_btn_submit">Soumettre</string>
    <string name="quiz_btn_next_flag">Drapeau suivant</string>
    <string name="quiz_congrats">Félicitations %1$s!</string>
    <string name="quiz_trophy_content">Trophy Image</string>
    <string name="quiz_score">Vôtre score est  %1$d hors de %2$d.</string>
    <string name="welcome_btn_continue">Continue</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="quiz_select_answer">Veuillez sélectionner une réponse.</string>
    <string name="quiz_heart_content">Heart Icon.</string>
    <string name="continent_africa">Afrique</string>
    <string name="continent_asia" translatable="false">Asie</string>
    <string name="continent_europe">Europe</string>
    <string name="continent_north_america">Amérique du Nord</string>
    <string name="continent_oceania">Océanie</string>
    <string name="continent_south_america">Amérique du Sud</string>
    <string name="country_af_algeria">Algérie</string>
    <string name="country_af_angola" translatable="false">Angola</string>
    <string name="country_af_benin" translatable="false">Bénin</string>
    <string name="country_af_botswana" translatable="false">Bostwana</string>
    <string name="country_af_burkina_faso" translatable="false">Burkina Faso</string>
    <string name="country_af_burundi" translatable="false">Burundi</string>
    <string name="country_af_cameroon">Cameroun</string>
    <string name="country_af_cape_verde">Cap-Vert</string>
    <string name="country_af_central_african_republic">République centrafricaine</string>
    <string name="country_af_chad" translatable="false">Tchad</string>
    <string name="country_af_comoros">Comoros</string>
    <string name="country_af_democatic_republic_congo">République Démocratique du Congo</string>
    <string name="country_af_republic_congo">République du Congo</string>
    <string name="country_af_cote_d_ivoire">Côte d\'Ivoire</string>
    <string name="country_af_djibouti" translatable="false">Djibouti</string>
    <string name="country_af_egypt">Egypte</string>
    <string name="country_af_equatorial_guinea">Guinée Équatoriale</string>
    <string name="country_af_eritrea" translatable="false">Érythrée</string>
    <string name="country_af_ethiopia">Ethiopie</string>
    <string name="country_af_gabon">Gabon</string>
    <string name="country_af_gambia" translatable="false">Gambie</string>
    <string name="country_af_ghana" translatable="false">Ghana</string>
    <string name="country_af_guinea_bissau" translatable="false">Guinée Bissau</string>
    <string name="country_af_guinea" translatable="false">Guinée</string>
    <string name="country_af_kenya">Kenya</string>
    <string name="country_af_lesotho">Lesotho</string>
    <string name="country_af_liberia" translatable="false">Libéria</string>
    <string name="country_af_libya">Libye</string>
    <string name="country_af_madagascar" translatable="false">Madagascar</string>
    <string name="country_af_malawi" translatable="false">Malawi</string>
    <string name="country_af_mali" translatable="false">Mali</string>
    <string name="country_af_mauritius">Maurice</string>
    <string name="country_af_morocco">Maroc</string>
    <string name="country_af_mozambique" translatable="false">Mozambique</string>
    <string name="country_af_namibia" translatable="false">Namibie</string>
    <string name="country_af_niger">Niger</string>
    <string name="country_af_nigeria" translatable="false">Nigeria</string>
    <string name="country_af_rwanda">Rwanda</string>
    <string name="country_af_sao_tome_principe">Sao Tomé et Principe</string>
    <string name="country_af_senegal" translatable="false">Sénégal</string>
    <string name="country_af_seychelles" translatable="false">les Seychelles</string>
    <string name="country_af_sierra_leone" translatable="false">Sierra Leone</string>
    <string name="country_af_somalia" translatable="false">Somalie</string>
    <string name="country_af_south_africa">L\'Afrique du Sud</string>
    <string name="country_af_south_sudan">Soudan du sud</string>
    <string name="country_af_sudan">Soudan</string>
    <string name="country_af_swaziland">Swaziland</string>
    <string name="country_af_tanzania" translatable="false">Tanzanie</string>
    <string name="country_af_togo" translatable="false">Togo</string>
    <string name="country_af_tunisia">Tunisie</string>
    <string name="country_af_uganda" translatable="false">Ouganda</string>
    <string name="country_af_zambia" translatable="false">Zambie</string>
    <string name="country_af_zimbabwe">Zimbabwe</string>
    <string name="country_af_mauritania" translatable="false">Mauritanie</string>
    <string name="country_as_afghanistan">Afghanistan</string>
    <string name="country_as_armenia" translatable="false">Arménie</string>
    <string name="country_as_azerbaijan">Azerbaïdjan</string>
    <string name="country_as_bahrain">Bahreïn</string>
    <string name="country_as_bangladesh" translatable="false">Bengladesh</string>
    <string name="country_as_bhutan">Bhoutan</string>
    <string name="country_as_brunei" translatable="false">Brunéi</string>
    <string name="country_as_cambodia">Cambodge</string>
    <string name="country_as_china" translatable="false">Chine</string>
    <string name="country_as_cyprus">Chypre</string>
    <string name="country_as_india" translatable="false">Inde</string>
    <string name="country_as_indonesia" translatable="false">Indonésie</string>
    <string name="country_as_iran" translatable="false">L\'Iran</string>
    <string name="country_as_iraq">Irak</string>
    <string name="country_as_israel" translatable="false">Israël</string>
    <string name="country_as_japan">Japon</string>
    <string name="country_as_jordan">Jordan</string>
    <string name="country_as_kazakhstan">Kazakhstan</string>
    <string name="country_as_kuwait" translatable="false">Koweit</string>
    <string name="country_as_kyrgyzstan">Kirghizistan</string>
    <string name="country_as_laos" translatable="false">Laos</string>
    <string name="country_as_lebanon">Liban</string>
    <string name="country_as_malaysia">Malaisie</string>
    <string name="country_as_maldives">Maldives</string>
    <string name="country_as_mongolia" translatable="false">Mongolie</string>
    <string name="country_as_myanmar" translatable="false">Birmanie</string>
    <string name="country_as_nepal" translatable="false">Népal</string>
    <string name="country_as_north_korea">Corée du Nord</string>
    <string name="country_as_oman">Oman</string>
    <string name="country_as_pakistan">Pakistan</string>
    <string name="country_as_philippines">Philippines</string>
    <string name="country_as_qatar">Qatar</string>
    <string name="country_as_russia">Russie</string>
    <string name="country_as_saudi_arabia">Arabie Saoudite</string>
    <string name="country_as_singapore">Singapour</string>
    <string name="country_as_south_korea">Corée du Sud</string>
    <string name="country_as_sri_lanka" translatable="false">Sri Lanka</string>
    <string name="country_as_syria">Syrie</string>
    <string name="country_as_taiwan">Taïwan</string>
    <string name="country_as_tajikistan">Tadjikistan</string>
    <string name="country_as_thailand">Thaïlande</string>
    <string name="country_as_turkey">Turquie</string>
    <string name="country_as_turkmenistan">Turkménistan</string>
    <string name="country_as_united_arab_emirates">Emirats Arabes Unis</string>
    <string name="country_as_uzbekistan" translatable="false">Ouzbékistan</string>
    <string name="country_as_vietnam" translatable="false">Viêt Nam</string>
    <string name="country_as_yemen" translatable="false">Yémen</string>
    <string name="country_eu_albania" translatable="false">Albanie</string>
    <string name="country_eu_andorra" translatable="false">Andorre</string>
    <string name="country_eu_austria" translatable="false">L\'Autriche</string>
    <string name="country_eu_belarus">Biélorussie</string>
    <string name="country_eu_belgium">Belgique</string>
    <string name="country_eu_bosnia_and_herzegovina">Bosnie Herzégovine</string>
    <string name="country_eu_bulgaria" translatable="false">Bulgarie</string>
    <string name="country_eu_croatia">Croatie</string>
    <string name="country_eu_czech_republic">République Tchèque</string>
    <string name="country_eu_denmark">Danemark</string>
    <string name="country_eu_estonia" translatable="false">Estonie</string>
    <string name="country_eu_finland">Finlande</string>
    <string name="country_eu_france">France</string>
    <string name="country_eu_georgia" translatable="false">Géorgie</string>
    <string name="country_eu_germany">Allemagne</string>
    <string name="country_eu_greece">Grèce</string>
    <string name="country_eu_hungary">Hongrie</string>
    <string name="country_eu_iceland">Islande</string>
    <string name="country_eu_ireland">Irlande</string>
    <string name="country_eu_italy">Italie</string>
    <string name="country_eu_kosovo" translatable="false">Kosovo</string>
    <string name="country_eu_latvia">Lettonie</string>
    <string name="country_eu_liechtenstein" translatable="false">Liechtenstein</string>
    <string name="country_eu_lithuania" translatable="false">Lituanie</string>
    <string name="country_eu_luxembourg">Luxembourg</string>
    <string name="country_eu_macedonia" translatable="false">Macédoine</string>
    <string name="country_eu_malta" translatable="false">Malte</string>
    <string name="country_eu_moldova">Moldavie</string>
    <string name="country_eu_monaco">Monaco</string>
    <string name="country_eu_montenegro" translatable="false">Monténégro</string>
    <string name="country_eu_netherlands">Pays-Bas</string>
    <string name="country_eu_norway">Norvège</string>
    <string name="country_eu_poland">Pologne</string>
    <string name="country_eu_portugal" translatable="false">Portugal</string>
    <string name="country_eu_romania">Roumanie</string>
    <string name="country_eu_san_marino" translatable="false">Saint Marin</string>
    <string name="country_eu_serbia" translatable="false">Serbie</string>
    <string name="country_eu_slovakia">Slovaquie</string>
    <string name="country_eu_slovenia">Slovénie</string>
    <string name="country_eu_spain">Espagne</string>
    <string name="country_eu_sweden">Suède</string>
    <string name="country_eu_switzerland">Suisse</string>
    <string name="country_na_dominican_republic">République dominicaine</string>
    <string name="country_oc_australia" translatable="false">Australie</string>
    <string name="country_sa_argentina" translatable="false">Argentine</string>
    <string name="rules_one">1. Sélectionnez la réponse parmi les options proposées.</string>
    <string name="rules_title">Ailyan vérifiera si vous connaissez bien les drapeaux du monde !</string>
    <string name="rules_two">2. A chaque fois que vous obtenez une bonne réponse, vous passez au drapeau suivant.</string>
    <string name="rules_three">3. Si vous obtenez 5 mauvaises réponses, votre quiz se termine!</string>
    <string name="rules_four">4. Vous pouvez revenir à l\'écran d\'accueil en utilisant haut ou en arrière \n depuis l\'écran du quiz, et cela mettra également fin à votre quiz.</string>
    <string name="rules_how_to_play">Comment jouer?</string>
</resources>