<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/retour"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/retour"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/ivLiveOne"
                style="@style/QuizLive"
                android:contentDescription="@string/quiz_heart_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivLiveTwo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivLiveTwo"
                style="@style/QuizLive"
                android:contentDescription="@string/quiz_heart_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivLiveThree"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivLiveThree"
                app:layout_constraintEnd_toStartOf="@+id/ivLiveFour"
                style="@style/QuizLive"
                android:contentDescription="@string/quiz_heart_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView

                android:id="@+id/ivLiveFour"
                style="@style/QuizLive"
                app:layout_constraintEnd_toStartOf="@+id/ivLiveFive"
                android:contentDescription="@string/quiz_heart_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/ivLiveFive"
                style="@style/QuizLive"
                android:contentDescription="@string/quiz_heart_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:progress="50" />

            <TextView
                android:id="@+id/tvProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/secondaryTextColor"
                android:textColorHint="#7a8089"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="5/10" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/quiz_flag_content"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:context=".ui.QuizFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_marginTop="9dp"
                    android:gravity="center"

                   android:layout_gravity="center"
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_flag_question"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="44sp"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="spread" />
            </LinearLayout>




            <LinearLayout
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="750dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:id="@+id/tvAnswerOne"
                    style="@style/QuizAnswer"
                    android:layout_marginTop="3dp"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/country_sa_argentina" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_height="200dp"
                    android:id="@+id/tvAnswerTwo"
                    android:layout_width="350dp"
                    style="@style/QuizAnswer"
                    android:layout_marginTop="2dp"
                    tools:text="@string/country_na_dominican_republic" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:orientation="horizontal">


                <TextView
                    android:layout_marginLeft="18dp"
                    android:id="@+id/tvAnswerThree"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    style="@style/QuizAnswer"
                    android:layout_marginTop="20dp"
                    tools:text="@string/country_as_armenia" />
                <TextView
                    android:id="@+id/tvAnswerFour"
                    android:layout_marginLeft="25dp"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    style="@style/QuizAnswer"
                    android:layout_marginTop="20dp"
                    tools:text="@string/country_oc_australia" />
                    </LinearLayout>
                </LinearLayout>



                <ImageView
                    android:layout_marginTop="3dp"
                    android:id="@+id/ivFlag"
                    android:layout_marginLeft="6dp"
                    android:layout_width="520dp"
                    android:layout_height="420dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_default_answer_border"
                    android:contentDescription="@string/quiz_flag_content"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    tools:src="@drawable/na_dominican_republic_flag" />

            </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>